# RecordLinker

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  codecov.yml  compose.yml  lefthook.yml  pyproject.toml  test.db
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: 1-task.md  2-bug.md  2-epic.md  3-bug.md  bug_report.md  epic.md  task.md
.github/workflows/: build_and_cache_images.yml  build_and_push_test_images.yml  check_a11y_docs.yml  check_code_vulnerabilities.yml  check_lint.yml  check_smoke_tests.yml  check_types.yml  check_unit_tests.yml  ci.yml  demo_package.yml  lint.yml  release.yml  release_drafter.yml  release_publish.yml  scan_trivy.yml  slack_notifier_merged.yaml  slack_notifier_merged.yml  slack_notifier_open_pulls.yml  slack_notifier_review.yaml  slack_notifier_review.yml  test_cached_image.yml  test_unit.yml  trigger_demo_workflow.yaml
alembic/: README.md  env.py
alembic/versions/: 0c90faa0378f_create_algorithm_tables.py  0db31a429322_create_algorithm_tables.py  3a677cb88b01_create_algorithm_tables.py  591a56cee781_.py  6052c193a26a_add_blockingvalue_table.py  64ed9566f189_external_person_id_should_be_nullable.py  773a9759734c_redesign_mpi_schema.py  987a0f14f4d7_recreating_mpi_schema.py  9e8d40d923ea_add_dibbs_algorithms.py  a30b8bbccfdf_add_dibbs_algorithms.py  ad18f1d41fad_convert_blockingkey_into_enum.py  bfbd015ca466_moving_externalperson_to_patient_table.py  d9eba1bdbad1_recreating_mpi_schema.py  f5716ac94693_dropping_mpi_schema.py  fb1b1ba0ad1f_add_reference_id_to_person_and_patient.py
apps/recordlinker/: config.py  main.py
apps/recordlinker/linking/: link.py
apps/recordlinker/routes/: patient_router.py  seed_router.py
apps/recordlinker/schemas/: identifier.py  link.py  pii.py  seed.py
apps/webapp/: next.config.ts  package.json
assets/: development_log_config.json  initial_algorithms.json  production_log_config.json
assets/linkage/: dibbs_basic_algorithm.json  dibbs_enhanced_algorithm.json
assets/linking/: basic_algorithm.json  enhanced_algorithm.json
docs/: api_template.hbs  developer_guide.md  index.md  installation.md  mkdocs.yml  mpi-design.md  process_for_adding_feature.md  reference.md  releases.md
docs/postman/: README.md  Record Linker Postman Collection.postman_collection.json
docs/public/: configuration.md
docs/site/: algo-configuration.md  algo-design.md  app-configuration.md  configuration.md  design.md  developer_guide.md  features.md  getting-started.md  index.md  installation.md  reference.md  schema-design.md  tuning.md
docs/site/stylesheets/: custom.css
migrations/: README.md  env.py
migrations/versions/: b6a93e4b05e1_initial_migration.py
ops/manifests/: README  record-linkage.yml
ops/manifests/scripts/: minikube-start.sh
ops/terraform/aci/: _local.tf  _variable.tf  main.tf
rfc/: 000-template.md  001-identifier-triplets.md  002-log-odds-score-threshold.md  003-skip-values.md
scripts/: algorithm_config.py  bootstrap.sh  build_docs.sh  check_types.sh  example_linkage_test.sh  gen_seed_test_data.py  linkage_tests.sh  lint.sh  local_server.sh  local_server_ui.sh  next_tag.sh  open_pulls.sh  seed_data.py  smoke_tests.sh  test.sh  test_unit.sh  unit_test.sh  version_name.sh  vulnerability_check.sh
src/api/recordlinker/: __init__.py  config.py  cookie_store.py  log.py  main.py  session_store.py
src/recordlinker/: base_service.py  config.py  database.py  log.py  main.py  middleware.py  models.py  splunk.py  utils.py
src/recordlinker/assets/: initial_algorithms.json  production_log_config.json  states.json  usps_street_suffixes.json
src/recordlinker/database/: __init__.py  algorithm_service.py  mpi_service.py  tuning_service.py
src/recordlinker/hl7/: fhir.py
src/recordlinker/linkage/: algorithms.py  config.py  link.py  matchers.py  models.py  mpi.py  simple_mpi.py  utils.py
src/recordlinker/linking/: algorithm_service.py  clean.py  link.py  matchers.py  mpi_service.py  old_matchers.py  skip_values.py
src/recordlinker/models/: __init__.py  algorithm.py  base.py  calibration.py  mpi.py  pii.py  tuning.py
src/recordlinker/routes/: algorithm_router.py  calibration_router.py  link_router.py  patient_router.py  person_router.py  seed_router.py  tuning_router.py
src/recordlinker/schemas/: __init__.py  algorithm.py  identifier.py  link.py  mpi.py  pii.py  tuning.py
src/recordlinker/tuning/: __init__.py  base.py  prob_calc.py
src/recordlinker/utils/: __init__.py  datetime.py  functools.py  mock.py  normalize.py  openapi_schema.py  path.py  routes.py
src/ui/: .browserslistrc  eslint.config.mjs  next.config.ts  package-lock.json  package.json
tests/: test_dal.py  test_linkage.py  test_mpi.py  test_mpi_utils.py  test_record_linkage.py  test_seed.py  test_utils.py
tests/algorithm/: Dockerfile.algo  README.md  algo.env
tests/algorithm/configurations/: algorithm_configuration.json
tests/algorithm/data/: README.md  better_test.csv  expanded_nbs_test.csv  nbs_seed.csv  nbs_test.csv  sample_seed_data.csv  sample_test_data.csv  seed_data.csv  test_data.csv
tests/algorithm/results/: output.csv
tests/algorithm/scripts/: add_configuration.py  calculate_metrics.py  expand_test_data.py  helpers.py  reset_db.py  run_test.py  seed_db.py  send_test_records.py  set_configuration.py
tests/load/: README.md  locustfile.py
tests/load/assets/: test_data.json
tests/load/scrambler/: base.py  config.py  csv.py  json.py  utils.py
tests/load/scripts/: expand_test_data.py  scramble_data.py  visualize_memory_usage.py
tests/performance/: Dockerfile.runner  README.md  rlpt.env
tests/performance/conf/: postgresql.conf
tests/performance/scripts/: analyze_trace_timings.sh  extract_lac_data.sh  reset_db.sh  (+6 more)
tests/unit/: conftest.py  test_config.py  test_dal.py  test_linkage.py  test_linkage_utils.py  test_log.py  test_main.py  test_matchers.py  test_middleware.py  test_models.py  test_mpi.py  test_record_linkage.py  test_seed.py  test_session_store.py  test_simple_mpi.py  test_splunk.py  test_utils.py
(+135 files in other folders)
